--- a/package.json
+++ b/package.json
@@ -16,14 +16,21 @@
     "@react-three/fiber": "^8.17.5",
     "@sentry/nextjs": "^8.26.0",
     "@types/react-lottie": "^1.2.10",
+    "axios": "^1.7.9",
     "bento-grid": "^0.1.1",
+    "body-parser": "^1.20.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "framer-motion": "^11.3.28",
     "lucide-react": "^0.427.0",
     "mini-svg-data-uri": "^1.4.4",
-    "next": "14.2.5",
+    "mysql2": "^3.12.0",
+    "next": "^14.2.23",
     "next-themes": "^0.3.0",
+    "pg": "^8.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -42,6 +49,6 @@
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.7.3"
   }
 }
